fix: analytics not centered
Fixes #95
Also fixes issue where hero graph was visible on the main part.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -496,7 +496,7 @@ main {
 		font-size: 18px;
 	}
 
-	main {
+	.main-section {
 		width: 90%;
 	}
 
